<resources>
    <string name="app_name">HelloWorld</string>

    <!--首页recycylerView item-->
    <string name="title">Title，第一章</string>
    <string name="content">道可道，非常道。名可名，非常名。无，名天地之始；有，名万物之母。</string>
    <string name="more">more</string>
    <string name="love_count">love 100</string>
    <string name="conmment_count">comments 100</string>
    <string name="action_settings">Settings</string>
</resources>
