<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img_profile"
                android:layout_toRightOf="@id/profile_image"
                android:text="@string/title"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_more"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/more"
                android:src="@drawable/more" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="10dp"
            android:text="@string/content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_love"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/more"
                android:src="@drawable/tab_home" />

            <TextView
                android:id="@+id/tv_love_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_love"
                android:layout_toRightOf="@id/img_love"

                android:text="@string/love_count" />


            <ImageView
                android:id="@+id/img_comment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_toRightOf="@id/tv_love_count"
                android:layout_toEndOf="@id/tv_love_count"
                android:contentDescription="@string/more"
                android:src="@drawable/tab_home" />

            <TextView
                android:id="@+id/tv_comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_comment"
                android:layout_toRightOf="@id/img_comment"
                android:text="@string/conmment_count" />

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/liveList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />


</LinearLayout>